force-app/main/default/objects/Account/fields/Digital_Invoice_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Digital_Invoice_Remarks__c</fullName>
    <label>Digital Invoice Remarks</label>
    <type>TextArea</type>
</CustomField>