force-app/main/default/objects/Account/fields/DO_Owner__c.field-meta.xml
<CustomField>
    <fullName>DO_Owner__c</fullName>
    <label>D&amp;O Owner</label>
    <length>30</length>
    <type>Text</type>
</CustomField>