force-app/main/default/objects/Account/fields/DO_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>DO_Owner_Email__c</fullName>
    <label>D&amp;O Owner Email</label>
    <length>30</length>
    <type>Text</type>
</CustomField>