force-app/main/default/objects/Account/fields/DO_Policy_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DO_Policy_Start_Date__c</fullName>
    <label>DO Policy Start Date</label>
    <type>Date</type>
</CustomField>