force-app/main/default/objects/Account/fields/EEA__c.field-meta.xml
<CustomField>
    <fullName>EEA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>European Economic Area</description>
    <label>EEA</label>
    <type>Checkbox</type>
</CustomField>