force-app/main/default/objects/Account/fields/Email_for_digital_invoice__c.field-meta.xml
<CustomField>
    <fullName>Email_for_digital_invoice__c</fullName>
    <description>מייל לשליחת חשבונית דיגיטלית - הנהלת חשבונות</description>
    <label>מייל לשליחת חשבונית דיגיטלית</label>
    <type>Email</type>
</CustomField>