force-app/main/default/objects/Account/fields/Employer_Contact_Metafel__c.field-meta.xml
<CustomField>
    <fullName>Employer_Contact_Metafel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer Contact At Metafel</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Employer Contact At Metafel)</relationshipLabel>
    <relationshipName>AccountsContactMetafel</relationshipName>
    <type>Lookup</type>
</CustomField>