force-app/main/default/objects/Account/fields/Employer_Menahel_Tik__c.field-meta.xml
<CustomField>
    <fullName>Employer_Menahel_Tik__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer Menahel Tik</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsMenahelTik</relationshipName>
    <type>Lookup</type>
</CustomField>