force-app/main/default/objects/Account/fields/Employer_Secondary_Menahel_Tik__c.field-meta.xml
<CustomField>
    <fullName>Employer_Secondary_Menahel_Tik__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer Secondary Menahel Tik</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>חשבונות (Employer Secondary Menahel Tik)</relationshipLabel>
    <relationshipName>SecondaryMenahelTikUser</relationshipName>
    <type>Lookup</type>
</CustomField>