force-app/main/default/objects/Account/fields/ExternalIDIL__c.field-meta.xml
<CustomField>
    <fullName>ExternalIDIL__c</fullName>
    <externalId>true</externalId>
    <label>ExternalIDIL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>