force-app/main/default/objects/Account/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>תת מרכז רווח (סוכנות)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>גדי לונגין</fullName>
            </value>
            <value>
                <fullName>טל סנונית</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>