force-app/main/default/objects/Account/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <description>מקור הפניית לקוח</description>
    <label>מקור הפניית לקוח</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>הפניה מדף נחיתה</fullName>
            </value>
            <value>
                <fullName>הפניית מלקוח עסקי</fullName>
            </value>
            <value>
                <fullName>נסיעה פרטית כהמשך לעסקית</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>