force-app/main/default/objects/Account/fields/Field3CARS__c.field-meta.xml
<CustomField>
    <fullName>Field3CARS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>צי רכב</label>
    <type>Checkbox</type>
</CustomField>