force-app/main/default/objects/Account/fields/Field5CYBER__c.field-meta.xml
<CustomField>
    <fullName>Field5CYBER__c</fullName>
    <defaultValue>false</defaultValue>
    <description>התחייבות חוזית לדווח על סייבר. תוצר של חתימה על NDA/חוזה מול לקוח. בקשה של COMPLIANCE 18.7.22</description>
    <label>התחייבות חוזית לדווח על סייבר</label>
    <type>Checkbox</type>
</CustomField>