force-app/main/default/objects/Account/fields/Field5TAX__c.field-meta.xml
<CustomField>
    <fullName>Field5TAX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>לקוח צרכי מע&quot;מ פטור</label>
    <type>Checkbox</type>
</CustomField>