force-app/main/default/objects/Account/fields/Flag_Formula__c.field-meta.xml
<CustomField>
    <fullName>Flag_Formula__c</fullName>
    <formula>if (( Novidea_HPC__total_Open_Claim__c &gt; 0) , IMAGE(&quot;/servlet/servlet.FileDownload?file=0154G000004XhZZ&quot;, &quot;redFlag&quot;, 16, 16),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>סטטוס תביעות</label>
    <type>Text</type>
</CustomField>