force-app/main/default/objects/Account/fields/Flag_Formula_fee__c.field-meta.xml
<CustomField>
    <fullName>Flag_Formula_fee__c</fullName>
    <formula>if (OR( Total_debt_Policy__c &gt; 0, Total_fee_debt__c &gt; 0) , IMAGE(&quot;/servlet/servlet.FileDownload?file=0154G000004XhZZ&quot;, &quot;redFlag&quot;, 16, 16),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>סטטוס גביה</label>
    <type>Text</type>
</CustomField>