force-app/main/default/objects/Account/fields/Foundation_Date__c.field-meta.xml
<CustomField>
    <fullName>Foundation_Date__c</fullName>
    <label>Foundation Date</label>
    <type>Date</type>
</CustomField>