force-app/main/default/objects/Account/fields/Google_Map__c.field-meta.xml
<CustomField>
    <fullName>Google_Map__c</fullName>
    <formula>IMAGE( 

&quot;http://maps.google.com/maps/api/staticmap?center=&quot; + BillingStreet + &quot;,&quot; + BillingCity + &quot;,&quot; + BillingState + &quot; &quot; + BillingPostalCode +&quot;&amp;zoom=13&amp;size=650x250&amp;markers=color:blue|&quot; + BillingStreet + &quot;,&quot; + BillingCity + &quot;,&quot; + BillingState + &quot; &quot; + BillingPostalCode + &quot;&amp;sensor=false&amp;format=png32&amp;key=&quot; + $Label.GApiKey 





, &quot;no map available&quot;, 250, 650)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Map</label>
    <type>Text</type>
</CustomField>