force-app/main/default/objects/Account/fields/Has_Active_Policy_by_Product_types__c.field-meta.xml
<CustomField>
    <fullName>Has_Active_Policy_by_Product_types__c</fullName>
    <formula>Not(isblank(Active_Insurance_Types__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Active Policy by Product types</label>
    <type>Checkbox</type>
</CustomField>