force-app/main/default/objects/Account/fields/Has_Business__c.field-meta.xml
<CustomField>
    <fullName>Has_Business__c</fullName>
    <formula>INCLUDES( Active_Insurance_Types__c ,&apos;Business&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property And Casualty</label>
    <type>Checkbox</type>
</CustomField>