force-app/main/default/objects/Account/fields/Has_Constructors__c.field-meta.xml
<CustomField>
    <fullName>Has_Constructors__c</fullName>
    <formula>INCLUDES( Active_Insurance_Types__c ,&apos;Constructors&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAR</label>
    <type>Checkbox</type>
</CustomField>