force-app/main/default/objects/Account/fields/Has_Credit__c.field-meta.xml
<CustomField>
    <fullName>Has_Credit__c</fullName>
    <formula>INCLUDES( Active_Insurance_Types__c ,&apos;Credit&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit</label>
    <type>Checkbox</type>
</CustomField>