force-app/main/default/objects/Account/fields/Has_Crime__c.field-meta.xml
<CustomField>
    <fullName>Has_Crime__c</fullName>
    <formula>INCLUDES( Active_Insurance_Types__c ,&apos;Crime&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crime</label>
    <type>Checkbox</type>
</CustomField>