force-app/main/default/objects/Account/fields/Has_Cyber__c.field-meta.xml
<CustomField>
    <fullName>Has_Cyber__c</fullName>
    <formula>INCLUDES( Active_Insurance_Types__c ,&apos;Cyber&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cyber</label>
    <type>Checkbox</type>
</CustomField>