force-app/main/default/objects/Account/fields/Has_Directors__c.field-meta.xml
<CustomField>
    <fullName>Has_Directors__c</fullName>
    <formula>INCLUDES( Active_Insurance_Types__c ,&apos;Directors&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D&amp;O</label>
    <type>Checkbox</type>
</CustomField>