force-app/main/default/objects/Account/fields/Has_Household__c.field-meta.xml
<CustomField>
    <fullName>Has_Household__c</fullName>
    <formula>INCLUDES( Active_Insurance_Types__c ,&apos;Household&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Household</label>
    <type>Checkbox</type>
</CustomField>