force-app/main/default/objects/Account/fields/Has_Life_Insurace__c.field-meta.xml
<CustomField>
    <fullName>Has_Life_Insurace__c</fullName>
    <formula>INCLUDES( Active_Insurance_Types__c ,&apos;Life&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wise</label>
    <type>Checkbox</type>
</CustomField>