force-app/main/default/objects/Account/fields/Has_Marine__c.field-meta.xml
<CustomField>
    <fullName>Has_Marine__c</fullName>
    <formula>INCLUDES( Active_Insurance_Types__c ,&apos;Marine&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marine</label>
    <type>Checkbox</type>
</CustomField>