force-app/main/default/objects/Account/fields/Has_Medical_Research__c.field-meta.xml
<CustomField>
    <fullName>Has_Medical_Research__c</fullName>
    <formula>INCLUDES( Active_Insurance_Types__c ,&apos;Medical Research&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CT</label>
    <type>Checkbox</type>
</CustomField>