force-app/main/default/objects/Account/fields/Has_Motor__c.field-meta.xml
<CustomField>
    <fullName>Has_Motor__c</fullName>
    <formula>INCLUDES( Active_Insurance_Types__c ,&apos;Motor&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Motor</label>
    <type>Checkbox</type>
</CustomField>