force-app/main/default/objects/Account/fields/Has_PI__c.field-meta.xml
<CustomField>
    <fullName>Has_PI__c</fullName>
    <formula>INCLUDES( Active_Insurance_Types__c ,&apos;Liability&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PI / PL</label>
    <type>Checkbox</type>
</CustomField>