force-app/main/default/objects/Account/fields/Has_PL_CGL__c.field-meta.xml
<CustomField>
    <fullName>Has_PL_CGL__c</fullName>
    <formula>INCLUDES( Active_Insurance_Types__c ,&apos;PL CGL&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PL CGL</label>
    <type>Checkbox</type>
</CustomField>