force-app/main/default/objects/Account/fields/Has_Travel__c.field-meta.xml
<CustomField>
    <fullName>Has_Travel__c</fullName>
    <formula>INCLUDES( Active_Insurance_Types__c ,&apos;Travel&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel</label>
    <type>Checkbox</type>
</CustomField>