force-app/main/default/objects/Account/fields/Has_War_and_Terror__c.field-meta.xml
<CustomField>
    <fullName>Has_War_and_Terror__c</fullName>
    <formula>INCLUDES( Active_Insurance_Types__c ,&apos;War and Terror&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>War&amp;Terror</label>
    <type>Checkbox</type>
</CustomField>