force-app/main/default/objects/Account/fields/HasActivePolicy__c.field-meta.xml
<CustomField>
    <fullName>HasActivePolicy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>שדה שיעודכן ידנית לטובת שליחת מייל ללקוחות בתקופת הקורונה . **מיכל לוי**</description>
    <label>HasActivePolicy</label>
    <type>Checkbox</type>
</CustomField>