force-app/main/default/objects/Account/fields/Household_Icon__c.field-meta.xml
<CustomField>
    <fullName>Household_Icon__c</fullName>
    <formula>IF(  Has_Household__c , IMAGE(&quot;https://howdenil--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0684G00000CgyKE&amp;operationContext=CHATTER&amp;contentId=05T4G00000cSZMt&quot;, &quot;has Household&quot;, $Setup.IconSize__c.small__c, $Setup.IconSize__c.small__c),IMAGE(&quot;https://howdenil--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0684G00000CgyQ9&amp;operationContext=CHATTER&amp;contentId=05T4G00000cSYK4&quot;,&quot;Does not have Household&quot;, $Setup.IconSize__c.small__c, $Setup.IconSize__c.small__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Household</label>
    <type>Text</type>
</CustomField>