force-app/main/default/objects/Account/fields/Incremental_Number__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Number__c</fullName>
    <label>Incremental Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>