force-app/main/default/objects/Account/fields/Industry_As_MultiPicklist_For_Forms__c.field-meta.xml
<CustomField>
    <fullName>Industry_As_MultiPicklist_For_Forms__c</fullName>
    <label>Industry As MultiPicklist For Forms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>הנדסה</fullName>
            </value>
            <value>
                <fullName>אדריכלות</fullName>
            </value>
            <value>
                <fullName>תכנון ערים</fullName>
            </value>
            <value>
                <fullName>אחר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>