force-app/main/default/objects/Account/fields/Industry_Type_If_Else__c.field-meta.xml
<CustomField>
    <fullName>Industry_Type_If_Else__c</fullName>
    <label>Industry Type If Else</label>
    <length>100</length>
    <type>Text</type>
</CustomField>