force-app/main/default/objects/Account/fields/Is_Active_In_Filing_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_In_Filing_Criteria__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_Active_In_Filing_Criteria</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>