force-app/main/default/objects/Account/fields/Is_Howden_client__c.field-meta.xml
<CustomField>
    <fullName>Is_Howden_client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>סימון לקוח שמקורו בהאודן</description>
    <label>Is Howden client</label>
    <type>Checkbox</type>
</CustomField>