force-app/main/default/objects/Account/fields/Is_Howden_Employee_Household__c.field-meta.xml
<CustomField>
    <fullName>Is_Howden_Employee_Household__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Howden Employee Household</label>
    <type>Checkbox</type>
</CustomField>