force-app/main/default/objects/Account/fields/Is_Israelit_client__c.field-meta.xml
<CustomField>
    <fullName>Is_Israelit_client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>סימון ללקוח קיים בישראלית</description>
    <label>Is Israelit client</label>
    <type>Checkbox</type>
</CustomField>