force-app/main/default/objects/Account/fields/is_nasdaq__c.field-meta.xml
<CustomField>
    <fullName>is_nasdaq__c</fullName>
    <defaultValue>false</defaultValue>
    <label>חברת נסדאק</label>
    <type>Checkbox</type>
</CustomField>