force-app/main/default/objects/Account/fields/isLifeInsurer__c.field-meta.xml
<CustomField>
    <fullName>isLifeInsurer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLifeInsurer</label>
    <type>Checkbox</type>
</CustomField>