force-app/main/default/objects/Account/fields/IsraelitRemarksTMP__c.field-meta.xml
<CustomField>
    <fullName>IsraelitRemarksTMP__c</fullName>
    <description>For migration purpose.
can be remove after accounts merge.</description>
    <inlineHelpText>For migration purpose.
can be remove after accounts merge.</inlineHelpText>
    <label>IsraelitRemarksTMP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>