force-app/main/default/objects/Account/fields/KPI_Account__c.field-meta.xml
<CustomField>
    <fullName>KPI_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ניהול לקוחות KPI ברמת ארגון</description>
    <label>KPI Account</label>
    <type>Checkbox</type>
</CustomField>