force-app/main/default/objects/Account/fields/Last_Year_Bruto_Income_WorldwideFor_Form__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Bruto_Income_WorldwideFor_Form__c</fullName>
    <label>Last Year Bruto Income WorldwideFor Form</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>