force-app/main/default/objects/Account/fields/Local_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Local_Carrier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>מבטח מקומי</label>
    <type>Checkbox</type>
</CustomField>