force-app/main/default/objects/Account/fields/Main_location_management__c.field-meta.xml
<CustomField>
    <fullName>Main_location_management__c</fullName>
    <label>מיקום עיקר ההנהלה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ישראל</fullName>
            </value>
            <value>
                <fullName>ארה&quot;ב</fullName>
            </value>
            <value>
                <fullName>אחר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>