force-app/main/default/objects/Account/fields/manage_RI__c.field-meta.xml
<CustomField>
    <fullName>manage_RI__c</fullName>
    <label>manage RI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>manage_RI</valueSetName>
    </valueSet>
</CustomField>