force-app/main/default/objects/Account/fields/Motor_Icon__c.field-meta.xml
<CustomField>
    <fullName>Motor_Icon__c</fullName>
    <formula>IF(  Has_Motor__c  , IMAGE(&quot;https://howdenil--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0684G00000Cgy7J&amp;operationContext=CHATTER&amp;contentId=05T4G00000cSZMe&quot;, &quot;has motor&quot;, $Setup.IconSize__c.small__c, $Setup.IconSize__c.small__c),IMAGE(&quot;https://howdenil--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0684G00000CgyQ8&amp;operationContext=CHATTER&amp;contentId=05T4G00000cSZNN&quot;,&quot;Does not have Motor&quot;, $Setup.IconSize__c.small__c, $Setup.IconSize__c.small__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Motor</label>
    <type>Text</type>
</CustomField>