force-app/main/default/objects/Account/fields/Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Name_Formula__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>שם</label>
    <type>Text</type>
</CustomField>