force-app/main/default/objects/Account/fields/NBPM__Team__c.field-meta.xml
<CustomField>
    <fullName>NBPM__Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#6494</description>
    <label>Team</label>
    <referenceTo>NBPM__Team__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>