force-app/main/default/objects/Account/fields/NBPM__Teams_Assembly__c.field-meta.xml
<CustomField>
    <fullName>NBPM__Teams_Assembly__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teams Assembly</label>
    <referenceTo>NBPM__Teams_Assembly__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>