force-app/main/default/objects/Account/fields/NBU__Hold_Pot_Account__c.field-meta.xml
<CustomField>
    <fullName>NBU__Hold_Pot_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold (Pot) Account</label>
    <type>Checkbox</type>
</CustomField>