force-app/main/default/objects/Account/fields/NBU__Is_Trust_Account__c.field-meta.xml
<CustomField>
    <fullName>NBU__Is_Trust_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Support dynamic representation of broker&apos;s trust accounts on the closing docs according to the settlement currency</description>
    <inlineHelpText>Support dynamic representation of broker&apos;s trust accounts on the closing docs according to the settlement currency</inlineHelpText>
    <label>Is Trust Account</label>
    <type>Checkbox</type>
</CustomField>