force-app/main/default/objects/Account/fields/NBU__Legal_Entity_Abbr_Group__c.field-meta.xml
<CustomField>
    <fullName>NBU__Legal_Entity_Abbr_Group__c</fullName>
    <label>Legal Entity Group Abbrevation</label>
    <length>3</length>
    <type>Text</type>
</CustomField>