force-app/main/default/objects/Account/fields/NBU__Legal_Entity_Base_Currency__c.field-meta.xml
<CustomField>
    <fullName>NBU__Legal_Entity_Base_Currency__c</fullName>
    <label>Legal Entity Base Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NBU__Currencies</valueSetName>
    </valueSet>
</CustomField>