force-app/main/default/objects/Account/fields/NBU__Legal_Entity_Group__c.field-meta.xml
<CustomField>
    <fullName>NBU__Legal_Entity_Group__c</fullName>
    <label>Legal Entity Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>