force-app/main/default/objects/Account/fields/NBU__Legal_Entity_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>NBU__Legal_Entity_Hierarchy__c</fullName>
    <label>Legal Entity Hierarchy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>