force-app/main/default/objects/Account/fields/NBU__Sharing_Criteria__c.field-meta.xml
<CustomField>
    <fullName>NBU__Sharing_Criteria__c</fullName>
    <label>Sharing Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>