force-app/main/default/objects/Account/fields/NBU__SLASerialNumber__c.field-meta.xml
<CustomField>
    <fullName>NBU__SLASerialNumber__c</fullName>
    <label>SLA Serial Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>