force-app/main/default/objects/Account/fields/Next_Year_Bruto_Income_WorldWideFor_Form__c.field-meta.xml
<CustomField>
    <fullName>Next_Year_Bruto_Income_WorldWideFor_Form__c</fullName>
    <label>Next Year Bruto Income WorldWideFor Form</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>