force-app/main/default/objects/Account/fields/Next_Year_SubContractors_Usa_For_Form__c.field-meta.xml
<CustomField>
    <fullName>Next_Year_SubContractors_Usa_For_Form__c</fullName>
    <label>Next Year SubContractors Usa For Form</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>