force-app/main/default/objects/Account/fields/Nilibit_Clino__c.field-meta.xml
<CustomField>
    <fullName>Nilibit_Clino__c</fullName>
    <label>Nilibit Clino</label>
    <length>10</length>
    <type>Text</type>
</CustomField>