force-app/main/default/objects/Account/fields/Novidea_HPC__Account_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Novidea_HPC__Account_Legal_Name__c</fullName>
    <description>A new field &apos;Account legal name&apos; is required in order to be used in perform letters and in the Settlement document.</description>
    <inlineHelpText>uses in perform letters and in the Settlement document</inlineHelpText>
    <label>Account Legal Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>